# django-rest-framework-II

./: docker-compose.yml  dockerfile  init-db.sh  pyproject.toml  pytest.ini  requirements.txt  step.txt
.github/workflows/: ci.yml
core/: settings.py  urls.py
core/templates/: home.html
order/: factories.py
order/models/: order.py  order_item.py
order/serializers/: order_item_serializer.py  order_serializer.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
tests/: test_category.py  test_order_models.py  test_order_serializers.py  test_product_models.py  test_product_serializers.py
